[gd_scene load_steps=32 format=3 uid="uid://dy453cyhrwp5e"]

[ext_resource type="Script" uid="uid://colbhiornlcbf" path="res://enemies/bosses/flying_monster/flying_monster.gd" id="1_leej7"]
[ext_resource type="Shader" uid="uid://ctwquyuv011n6" path="res://enemies/bosses/hit_flash.tres" id="2_bxxvo"]
[ext_resource type="Texture2D" uid="uid://cv25ane235fx8" path="res://assets/bosses/flying_monster/FlyingMonsterSpriteSheet.png" id="2_xf8ou"]
[ext_resource type="Script" uid="uid://c2i1gugc522of" path="res://enemies/bosses/flying_monster/flying_monster_state_machine.gd" id="3_8nfe2"]
[ext_resource type="Script" uid="uid://c5pwtnwr3pk7e" path="res://enemies/bosses/flying_monster/flying_monster_wait_player_state.gd" id="4_44obp"]
[ext_resource type="Script" uid="uid://cn7c67rvep5ni" path="res://enemies/bosses/flying_monster/flying_monster_rest_state.gd" id="5_8gw4x"]
[ext_resource type="AudioStream" uid="uid://d2a0wfkuvqav2" path="res://assets/sfx/enemy/dragonboss/dragonbossappear.mp3" id="6_ab6wr"]
[ext_resource type="Script" uid="uid://cytaj802xrco1" path="res://enemies/bosses/flying_monster/flying_monster_active_state.gd" id="6_pd0nt"]
[ext_resource type="Script" uid="uid://d4ixlww6go1s6" path="res://enemies/bosses/flying_monster/flying_monster_shoot_state.gd" id="7_e8vug"]
[ext_resource type="PackedScene" uid="uid://dfg23m7fd87hk" path="res://enemies/bosses/flying_monster/flying_monster_bullet.tscn" id="8_0jh52"]
[ext_resource type="Script" uid="uid://rl35ru7a6mni" path="res://enemies/bosses/flying_monster/flying_monster_dash_state.gd" id="9_vukie"]
[ext_resource type="AudioStream" uid="uid://cf5d1hl4encdn" path="res://assets/sfx/enemy/dragonboss/dragonshoot.mp3" id="10_hqdlt"]
[ext_resource type="AudioStream" uid="uid://btt88ajyibp6r" path="res://assets/sfx/enemy/dragonboss/dragonrushin.mp3" id="12_bxxvo"]
[ext_resource type="Script" uid="uid://dacp7qmqgv587" path="res://enemies/bosses/flying_monster/flying_monster_death_state.gd" id="12_lwvki"]
[ext_resource type="PackedScene" uid="uid://ccchd0fggd573" path="res://traps/hurt_area.tscn" id="13_hqdlt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_leej7"]
radius = 30.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ab6wr"]
shader = ExtResource("2_bxxvo")
shader_parameter/enabled = false
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_pd0nt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyingMonster/FlyingMonsterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_p760j"]
resource_name = "attack"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyingMonster/FlyingMonsterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_44obp"]
resource_name = "death"
length = 0.23333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyingMonster/FlyingMonsterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334, 0.16666667, 0.20000334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlyingMonster")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.23333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_8nfe2"]
resource_name = "flying"
length = 0.5000125
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyingMonster/FlyingMonsterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_f61xb"]
resource_name = "hurt"
length = 0.5000125
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyingMonster/FlyingMonsterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_leej7"]
resource_name = "idle"
length = 0.5000125
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyingMonster/FlyingMonsterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_hqdlt"]
resource_name = "wait_player_active"
length = 0.75
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyingMonster/FlyingMonsterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [37, 36, 35, 33, 32]
}

[sub_resource type="Animation" id="Animation_ou034"]
resource_name = "wait_player_idle"
length = 0.9
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyingMonster/FlyingMonsterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.29, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [35, 36, 37]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8nfe2"]
_data = {
&"RESET": SubResource("Animation_pd0nt"),
&"attack": SubResource("Animation_p760j"),
&"death": SubResource("Animation_44obp"),
&"flying": SubResource("Animation_8nfe2"),
&"hurt": SubResource("Animation_f61xb"),
&"idle": SubResource("Animation_leej7"),
&"wait_player_active": SubResource("Animation_hqdlt"),
&"wait_player_idle": SubResource("Animation_ou034")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f61xb"]
size = Vector2(255, 216)

[sub_resource type="CircleShape2D" id="CircleShape2D_hqdlt"]
radius = 17.262676

[sub_resource type="Animation" id="Animation_pmxbq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyingMonsterSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j7vsr"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyingMonsterSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r24ei"]
_data = {
&"RESET": SubResource("Animation_pmxbq"),
&"hit_flash": SubResource("Animation_j7vsr")
}

[node name="FlyingMonster" type="Area2D"]
z_index = 2
collision_layer = 4
collision_mask = 0
script = ExtResource("1_leej7")
max_health = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 6)
shape = SubResource("CircleShape2D_leej7")

[node name="FlyingMonsterSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ab6wr")
texture = ExtResource("2_xf8ou")
hframes = 8
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_8nfe2")
}
autoplay = "idle"

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "monster", "anim_player", "rest_timer", "hit_flash_anim_player")]
script = ExtResource("3_8nfe2")
initial_state = NodePath("WaitPlayer")
monster = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
rest_timer = NodePath("../RestTimer")
hit_flash_anim_player = NodePath("../HitFlashAnimationPlayer")

[node name="WaitPlayer" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_44obp")

[node name="AppearSound" type="AudioStreamPlayer2D" parent="FiniteStateMachine/WaitPlayer"]
stream = ExtResource("6_ab6wr")
bus = &"Sfx"

[node name="Rest" type="Node" parent="FiniteStateMachine"]
script = ExtResource("5_8gw4x")

[node name="Active" type="Node" parent="FiniteStateMachine"]
script = ExtResource("6_pd0nt")

[node name="Shoot" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("bullet_holder")]
script = ExtResource("7_e8vug")
bullet_scene = ExtResource("8_0jh52")
bullet_holder = NodePath("../../BulletHolder")

[node name="ShootSound" type="AudioStreamPlayer2D" parent="FiniteStateMachine/Shoot"]
stream = ExtResource("10_hqdlt")
bus = &"Sfx"

[node name="Dash" type="Node" parent="FiniteStateMachine"]
script = ExtResource("9_vukie")

[node name="DashSound" type="AudioStreamPlayer2D" parent="FiniteStateMachine/Dash"]
stream = ExtResource("12_bxxvo")
bus = &"Sfx"

[node name="Death" type="Node" parent="FiniteStateMachine"]
script = ExtResource("12_lwvki")

[node name="DisappearSound" type="AudioStreamPlayer2D" parent="FiniteStateMachine/Death"]
stream = ExtResource("6_ab6wr")
bus = &"Sfx"

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("RectangleShape2D_f61xb")

[node name="BossUI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="BossUI"]
visible = false
custom_minimum_size = Vector2(100, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 8.0
offset_right = 50.0
offset_bottom = 24.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8

[node name="BulletHolder" type="Node" parent="."]

[node name="RestTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="HurtArea" parent="." instance=ExtResource("13_hqdlt")]
collision_layer = 0
damage_to_deal = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2(-5, 6)
shape = SubResource("CircleShape2D_hqdlt")
debug_color = Color(0.94358796, 0.15879083, 0.4541, 0.41960785)

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r24ei")
}

[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/WaitPlayer" method="_on_player_detection_body_entered"]
